# p01_DAA

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: adad.txt  calentamiento.txt  optimizacion2.txt  resultados1.txt  resultados_benchmark.txt
include/: Benchmark.h  ColumnAlgorithmSolve.h  FileSaver.h  Formatter.h  Matrix.h  MatrixGenerator.h  MatrixInstance.h  MatrixPrinter.h  MatrixSolution.h  ProblemInstance.h  RowAlgorithmSolve.h  Solution.h  SolutionInstace.h  Strategy.h
src/: Benchmark.cc  ColumnsAlgorithmSolve.cc  FileSaver.cc  Formater.cc  MatrixGenerator.cc  MatrixPrinter.cc  RowAlgorithmSolve.cc  main.cc
